Header spacing fix

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  margin-top: 2.5rem;
+  margin-top: 1rem;
   width: 100%;
 }
 
@@ -7,6 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 1rem;
 
   h1 {
     margin-top: unset;
